// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Name"
          id="admin.team_settings.team_list.nameHeader"
          values={Object {}}
        />,
        "width": 3,
      },
      Object {
        "field": "management",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Management"
          id="admin.team_settings.team_list.mappingHeader"
          values={Object {}}
        />,
      },
      Object {
        "field": "edit",
        "fixed": true,
        "name": "",
        "textAlign": "center",
      },
    ]
  }
  endCount={1}
  loading={false}
  nextPage={[Function]}
  page={0}
  placeholderEmpty={
    <FormattedMessage
      defaultMessage="No teams found"
      id="admin.team_settings.team_list.no_teams_found"
      values={Object {}}
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DNedit"
        >
          <Link
            to="/admin_console/user_management/teams/123"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "123",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN
            </b>
          </div>
        </div>,
      },
    ]
  }
  rowsContainerStyles={
    Object {
      "minHeight": "80px",
    }
  }
  search={[Function]}
  startCount={1}
  term=""
  total={1}
/>
`;

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot with paging 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Name"
          id="admin.team_settings.team_list.nameHeader"
          values={Object {}}
        />,
        "width": 3,
      },
      Object {
        "field": "management",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Management"
          id="admin.team_settings.team_list.mappingHeader"
          values={Object {}}
        />,
      },
      Object {
        "field": "edit",
        "fixed": true,
        "name": "",
        "textAlign": "center",
      },
    ]
  }
  endCount={10}
  loading={false}
  nextPage={[Function]}
  page={0}
  placeholderEmpty={
    <FormattedMessage
      defaultMessage="No teams found"
      id="admin.team_settings.team_list.no_teams_found"
      values={Object {}}
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN0edit"
        >
          <Link
            to="/admin_console/user_management/teams/id0"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id0",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN0"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN0
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN1edit"
        >
          <Link
            to="/admin_console/user_management/teams/id1"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id1",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN1"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN1
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN2edit"
        >
          <Link
            to="/admin_console/user_management/teams/id2"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id2",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN2"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN2
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN3edit"
        >
          <Link
            to="/admin_console/user_management/teams/id3"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id3",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN3"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN3
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN4edit"
        >
          <Link
            to="/admin_console/user_management/teams/id4"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id4",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN4"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN4
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN5edit"
        >
          <Link
            to="/admin_console/user_management/teams/id5"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id5",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN5"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN5
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN6edit"
        >
          <Link
            to="/admin_console/user_management/teams/id6"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id6",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN6"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN6
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN7edit"
        >
          <Link
            to="/admin_console/user_management/teams/id7"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id7",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN7"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN7
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN8edit"
        >
          <Link
            to="/admin_console/user_management/teams/id8"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id8",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN8"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN8
            </b>
          </div>
        </div>,
      },
      Object {
        "edit": <span
          className="group-actions"
          data-testid="DN9edit"
        >
          <Link
            to="/admin_console/user_management/teams/id9"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.team_settings.team_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id9",
        "management": <span
          className="TeamList_ManagementText"
        >
          <FormattedMessage
            defaultMessage="Invite Only"
            id="admin.team_settings.team_row.managementMethod.inviteOnly"
            values={Object {}}
          />
        </span>,
        "name": <div
          className="TeamList_NameText"
        >
          <TeamIcon
            name="DN9"
            size="sm"
            url={null}
          />
          <div>
            <b
              data-testid="team-display-name"
            >
              DN9
            </b>
          </div>
        </div>,
      },
    ]
  }
  rowsContainerStyles={
    Object {
      "minHeight": "800px",
    }
  }
  search={[Function]}
  startCount={1}
  term=""
  total={30}
/>
`;
